<resources>
    <string name="app_name">demo_app_gradle</string>
    <string name="list_title">影视综艺榜单</string>
    <string name="title_activity_live_date">LiveDateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="choose_list">影视综艺榜单</string>
    <string name="livedata_activity">LiveData测试</string>
    <string name="navigation_activity">Navigation测试</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="homeFra">Home</string>
    <string name="detailFra">Detail</string>
    <string name="Button_H_To_D">Go To Detail</string>
    <string name="button_D_To_H">GO TO Home</string>
    <string name="nav_vm">Nav_ViewModel测试</string>
    <string name="goin">进入</string>
    <string name="goout">退出</string>
    <string name="sub">-</string>
    <string name="add">+</string>
</resources>